# cnctd_shell

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: lib.rs
tests/: integration_test.rs
