[package]
name = "cnctd_shell"
version = "0.1.5"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Run simple shell commands"
license = "MIT"
repository = "https://github.com/Connected-Dot/cnctd_shell"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cnctd = { version = "0.1.3", path = "../cnctd" }
colored = "2.0.4"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
