[package]
name = "cnctd_shell"
version = "0.1.7"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Run simple shell commands"
license = "MIT"
repository = "https://github.com/Connected-Dot/cnctd_shell"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
colored = "2.1.0"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
